finish login functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,51 @@
 <head>
 </head>
 <body>
-<form action="/loginAuth" method="POST">
-	<input type="text" name = "username" placeholder="username" required/> </br>
-	<input type="password" name = "password" placeholder="password" required/></br>
-	<input type="submit" value = Login />
-	{% if error %}
-		<p class="error"><strong>Error:</strong> {{error}}</p>
-	{% endif %}
-</form>
+{% if error %}
+	<p class="error"><strong>Error:</strong> {{error}}</p>
+{% endif %}
+Please select user type: <select id="mySelect" onchange="myFunction()">
+  <option value="Empty">
+  <option value="Customer">Customer
+  <option value="Agent">Booking Agent
+  <option value="Staff">Airline Staff
+</select>
 
-<a href="/">Go back</a>
+<p id="login"></p>
+
+<script>
+function myFunction() {
+    var x = document.getElementById("mySelect").value;
+	if (x=="Empty"){
+		document.getElementById("login").innerHTML = "";
+	}
+	if (x=="Customer"){
+		document.getElementById("login").innerHTML = '<form action="/login_Customer" method="POST">\
+			username:<input type="text" name = "username" placeholder="username" required/> </br>\
+			password:<input type="password" name = "password" placeholder="password" required/></br>\
+			<input type="submit" value = Login />\
+			</form>';
+	}
+	if (x=="Staff"){
+		document.getElementById("login").innerHTML = '<form action="/login_Staff" method="POST">\
+			username:<input type="text" name = "username" placeholder="username" required/> </br>\
+			password:<input type="password" name = "password" placeholder="password" required/></br>\
+			<input type="submit" value = Login />\
+			</form>';
+	}
+	if (x=="Agent"){
+		document.getElementById("login").innerHTML = '<form action="/login_Agent" method="POST">\
+			email:<input type="text" name = "email" placeholder="email" required/> </br>\
+			password:<input type="password" name = "password" placeholder="password" required/></br>\
+			booking_agent_id:<input type="text" name = "booking_agent_id" placeholder="booking agent ID" required/> </br>\
+			<input type="submit" value = Login />\
+			</form>';
+	}
+}
+</script>
+
+
+<a href="/">Back</a>
 
 </body>
 
