--- a/templates/register.html
+++ b/templates/register.html
@@ -51,8 +51,9 @@ function myFunction() {
 	}
 	if (x=="Agent"){
 		document.getElementById("demo").innerHTML = '<form action="/register_Agent" method="POST">\
-			username:<input type="text" name = "username" placeholder="username" required/> </br>\
+			email:<input type="text" name = "email" placeholder="email" required/> </br>\
 			password:<input type="password" name = "password" placeholder="password" required/></br>\
+			booking_agent_id:<input type="text" name = "booking_agent_id" placeholder="booking agent ID" required/> </br>\
 			<input type="submit" value = Register />\
 			</form>';
 	}
