ready to complete purchaseAuth

--- a/templates/home_booking_agent.html
+++ b/templates/home_booking_agent.html
@@ -27,7 +27,7 @@
 
 <h2>Search for flights</h2>
 
-<form action="/purchaseAuth" method="POST">
+<form action="/purchase" method="POST">
 	<input type="text" name = "source" placeholder="source city" required/> </br>
 	<input type="text" name = "destination" placeholder="destination city" required/></br>
 	<input type="date" name = "departure date" placeholder="departure date" required/> </br>
