--- a/templates/purchase_agent.html
+++ b/templates/purchase_agent.html
@@ -19,14 +19,23 @@
 <form role = "form" action = "/purchaseAuth" method="POST">
 {% for line in posts %}
 	<tr>
-		<td>{{line['flight_num']}}</td>
+		<td id = "flight_num">{{line['flight_num']}}</td>
 		<td>{{line['dtime']}}</td>
 		<td>{{line['atime']}}</td>
 		<td>{{line['bprice']}}</td>
-		<td><input type="checkbox" name = "flight_num" value="test"></td>
+		<td><input type="checkbox" name = "flight_num" id = "input" onchange="assignValue()"></td>
 	</tr>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+	<script>
+		function assignValue(){
+			var flight_num = document.getElementById('flight_num').innerText
+			document.getElementById('input').value = flight_num
+			console.log(document.getElementById('input'))
+		}
+	</script>
 {% endfor %}
-	<input type="submit" value="Purchase" />
+<input type="submit" value="Purchase" />
 </form>
 </table>
 
