--- a/templates/purchaseAuth.html
+++ b/templates/purchaseAuth.html
@@ -39,6 +39,10 @@
       <td>￥{{data['bprice']}}</td>
     </tr>
     <tr>
+      <td>Customer Email: </td>
+      <td><input type="text" name = "customer_email" placeholder="Customer Email" required/></td>
+    </tr>
+    <tr>
       <td>Card Expiration Date: </td>
       <td><input type="date" name = "card_exp_date" placeholder="Card Expiration Date" required/></td>
     </tr>
