--- a/templates/success_purchase.html
+++ b/templates/success_purchase.html
@@ -6,9 +6,9 @@
 	<p class="error"><strong>Error:</strong> {{error}}</p>
 {% endif %}
 
-Purchase succeeded! 
+Purchase succeeded!
 
-<a href="/">Back</a>
+<a href="/{{redirect}}">Back</a>
 
 </body>
 </html>
