finish staff usecase 5

--- a/templates/home_staff.html
+++ b/templates/home_staff.html
@@ -64,7 +64,7 @@
 	<form action="/create_flight" method="POST">
 		<input type="text" name = "airline_name" placeholder="airline name" required/> </br>
 		<input type="text" name = "flight_num" placeholder="flight No." required/> </br>
-		<input type="int" name = "bprice" placeholder="base price" required/> </br>
+		<input type="text" name = "bprice" placeholder="base price" required/> </br>
 		<input type="text" name = "airplane_id" placeholder="airplane ID" required/> </br>
 		<input type="text" name = "status" placeholder="status" required/> </br>
 		<input type="text" name = "dairport" placeholder="departure airport" required/> </br>
