--- a/templates/purchaseAuth.html
+++ b/templates/purchaseAuth.html
@@ -58,6 +58,10 @@
       <td>Card Type: </td>
       <td><input type="text" name = "card_type" placeholder="Card Type" required/></td>
     </tr>
+    <tr>
+      <td>Commission:</td>
+      <td><input type="text" name = "commission" placeholder="commission fee" value = 0></td>
+    </tr>
   </table>
   <input type="submit" value = Purchase onclick="myFunction()" />
 </form>
