--- a/templates/home_staff.html
+++ b/templates/home_staff.html
@@ -337,7 +337,7 @@ var data1 = document.getElementById('sale1')
 var chart = new CanvasJS.Chart("chartContainer2", {
 	animationEnabled: true,
 	title: {
-		text: "Total revenue earned in last year"
+		text: "Total revenue earned in last month"
 	},
 	data: [{
 		type: "pie",
