--- a/templates/register.html
+++ b/templates/register.html
@@ -46,6 +46,7 @@ function myFunction() {
 			last_name:<input type="text" name = "last_name" placeholder="last_name" required/></br>\
 			date_of_birth:<input type="date" name = "date_of_birth" placeholder="date_of_birth" required/></br>\
 			airline_name:<input type="text" name = "airline_name" placeholder="airline_name" required/></br>\
+			phone_num:<input type="text" name = "phone_num" placeholder="phone_num" required/></br>\
 			<input type="submit" value = Register />\
 			</form>';
 	}
