enable search based on city

--- a/templates/home_staff.html
+++ b/templates/home_staff.html
@@ -69,6 +69,8 @@
 		<input type="text" name = "status" placeholder="status" required/> </br>
 		<input type="text" name = "dairport" placeholder="departure airport" required/> </br>
 		<input type="text" name = "aairport" placeholder="arrival airport" required/> </br>
+		<input type="text" name = "dcity" placeholder="departure city" required/> </br>
+		<input type="text" name = "acity" placeholder="arrival city" required/> </br>
 		Departure time: <br>
 		<input type="date" name = "ddate" required/> </br>
 		<input type="time" name = "dtime" required/> </br>
