minor bugs and merging

--- a/templates/home_staff.html
+++ b/templates/home_staff.html
@@ -17,7 +17,7 @@
 
 <!--Use case 4. View my flights-->
 <br><h>
-	My Future Flights</h>
+	Upcoming flights in the next 30 days</h>
 
 <table>
 	<th>Flight Number</th>
