--- a/templates/home_booking_agent.html
+++ b/templates/home_booking_agent.html
@@ -12,15 +12,19 @@
 <br>
 <h2>View my future flights</h2>
 <table>
+	<th>Customer</th>
 	<th>Flight number</th>
 	<th>Airline</th>
 	<th>Ticket ID</th>
+	<th>Purchase time</th>
 
 {% for line in flight_info %}
 	<tr>
+		<td>{{line['buyer_email']}}</td>
 		<td>{{line['flight_num']}}</td>
 		<td>{{line['airline_name']}}</td>
 		<td>{{line['ticket_ID']}}</td>
+		<td>{{line['purchase_date_time']}}</td>
 	</tr>
 {% endfor %}
 </table>
